=== master

* Remove is_json and is_not_json methods from the pg_json_ops extension, as the support was removed in PostgreSQL 15 beta 4 (jeremyevans)

* Fix handling of timestamps before the date of calendar reform when using pg_extended_date_support extension on Ruby 3.2 (jeremyevans)

=== 5.60.1 (2022-09-02)

* Revert conversion of respond_to? to defined?, as it breaks with unused refinements on Ruby 2 (jeremyevans) (#1919)

=== 5.60.0 (2022-09-01)

* Support arbitrary expressions for date_arithmetic interval values on PostgreSQL 9.4+ (jeremyevans)

* Support native IS DISTINCT FROM on SQLite 3.39+ instead of emulating support in the is_distinct_from extension (jeremyevans)

* Support HAVING without GROUP BY on SQLite 3.39+ (jeremyevans)

* Convert most respond_to? calls to equivalent defined? for better performance (jeremyevans)

=== 5.59.0 (2022-08-01)

* Set :allow_eager association option to false for instance specific associations without eager loaders (jeremyevans)

* Add require_valid_schema plugin for checking that model classes have schema parsed as expected (jeremyevans)

* Model classes created from aliased expressions and literal strings no longer use the simple table optimization (jeremyevans)

* Model code that does not swallow connection errors will now also not swallow disconnect errors (jeremyevans) (#1892)

* Add is_json and is_not_json methods to the pg_json_ops extension, for the PostgreSQL 15+ IS [NOT] JSON operator (jeremyevans)

* Support :security_invoker view option on PostgreSQL 15+, for views where access uses permissions of user instead of owner (jeremyevans)

* Support :nulls_distinct index option on PostgreSQL 15+, for NULLS [NOT] DISTINCT (jeremyevans)

* Support sequel-postgres-pr driver in the postgres adapter (jeremyevans)

=== 5.58.0 (2022-07-01)

* Support :disable_split_materialized Database option on MySQL to work around optimizer bug in MariaDB 10.5+ affecting association tests (jeremyevans)
